feat: code cleanup backend. feat: removed postgres dev service for local postgres instance