@@ -1,19 +1,19 @@
 package xyz.churrer.house.resource;
 
-import jakarta.inject.Inject;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
 import xyz.churrer.house.domain.dto.TelemetryDto;
 import xyz.churrer.house.service.TelemetryService;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Path("/api/telemetry")
 public class TelemetryResource {
 
-    @Inject
-    TelemetryService telemetryService;
+    private final TelemetryService telemetryService;
+
+    public TelemetryResource(TelemetryService telemetryService) {
+        this.telemetryService = telemetryService;
+    }
 
     @POST
     public String create(TelemetryDto telemetry) {
@@ -24,6 +24,6 @@ public class TelemetryResource {
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     public List<TelemetryDto> getAll() {
-        return this.telemetryService.findAll().stream().map(TelemetryDto::fromTelemetry).collect(Collectors.toList());
+        return this.telemetryService.findAll().stream().map(TelemetryDto::fromTelemetry).toList();
     }
 }
